fixed error with responsiveness- modals were not d-flex wrapping in mobile view

--- a/styles/main.css
+++ b/styles/main.css
@@ -205,19 +205,7 @@ button {
 }
 
 /* adjusts size of contact icons depending on size of card */
-@media (max-width:768px) {
-  .words {
-    padding: 15px;
-    width: auto;
-  }
-  .techs {
-    width: 70px;
-    margin: 20px 0px;
-  }
-  .container {
-    max-width: 95%;
-  }
-}
+
 @media (min-width: 992px) and (max-width: 1200px) {
   .fa-3x {
     font-size: 2.5em !important;
@@ -246,14 +234,10 @@ button {
   }
 }
 
-@media (min-width: 900px) {
+@media (max-width: 900px) {
   .techs {
     width: 70px;
     margin: 20px 0px;
-  }
-  
-  .words {
-    padding: 50px;
   }
 
   .header-text {
@@ -285,6 +269,12 @@ button {
 
   .navbar-brand img {
     padding-right: none;
+  }
+}
+@media (min-width: 992px){
+  .techs {
+    width: 70px;
+    margin: 20px 0px;
   }
 }
 
